--- a/src/main/resources/templates/cotacao/cotacao_cadastro.html
+++ b/src/main/resources/templates/cotacao/cotacao_cadastro.html
@@ -206,94 +206,68 @@
 			<div class="form-row">
 				<div class="form-group col-md-2">
 					<label for="pesoVariavel">Peso Opcional</label> 
-					
-					<input type="text"
-						class="form-control valor-com-virgula" id="pesoVariavel"
-						data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{pesoVariavel}"
-						th:classappend="${#fields.hasErrors('pesoVariavel')} ? 'is-invalid'" />
+					<input type="text" class="form-control valor-com-virgula" id="pesoVariavel" data-mask="#.##0,00" data-mask-reverse="true" th:field="*{pesoVariavel}" th:classappend="${#fields.hasErrors('pesoVariavel')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{pesoVariavel}"></span>
 					</div>
-					
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col">
-					<label for="precoMinimo">Preco Minimo</label> <input type="text"
-						class="form-control" id="precoMinimo" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{precoMinimo}" required
-						th:classappend="${#fields.hasErrors('precoMinimo')} ? 'is-invalid'" />
-
+					<label for="precoMinimo">Preco Minimo</label> 
+					<input type="text" class="form-control" id="precoMinimo" data-mask="#.##0,00" data-mask-reverse="true" th:field="*{precoMinimo}" required th:classappend="${#fields.hasErrors('precoMinimo')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{precoMinimo}"></span>
 					</div>
 				</div>
-				
 
-			<div class="col">
-					<label for="valorComum">Preco Comum</label> <input type="text"
-						class="form-control" id="valorComum" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{valorComum}" required
-						th:classappend="${#fields.hasErrors('valorComum')} ? 'is-invalid'" />
-
-
+				<div class="col">
+					<label for="valorComum">Preco Comum</label> 
+					<input type="text" class="form-control" id="valorComum" data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valorComum}" required th:classappend="${#fields.hasErrors('valorComum')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{valorComum}"></span>
 					</div>
 				</div>
 
 				<div class="col">
-					<label for="precoMaximo">Preco Máximo</label> <input type="text"
-						class="form-control" id="precoMaximo" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{precoMaximo}" required
-						th:classappend="${#fields.hasErrors('precoMaximo')} ? 'is-invalid'" />
+					<label for="precoMaximo">Preco Máximo</label> 
+					<input type="text" class="form-control" id="precoMaximo" data-mask="#.##0,00" data-mask-reverse="true" th:field="*{precoMaximo}" required th:classappend="${#fields.hasErrors('precoMaximo')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{precoMaximo}"></span>
 					</div>
 				</div>
 
-			 <div class="col">
-					<label for="precoMedio">Preco Médio</label> <input type="text"
-						class="form-control" id="precoMedio" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{precoMedio}" required
-						th:classappend="${#fields.hasErrors('precoMedio')} ? 'is-invalid'" />
+				<div class="col">
+					<label for="precoMedio">Preco Médio</label> 
+					<input type="text" class="form-control" id="precoMedio" data-mask="#.##0,00" data-mask-reverse="true" th:field="*{precoMedio}" required th:classappend="${#fields.hasErrors('precoMedio')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{precoMedio}"></span>
 					</div>
-				</div> 
+				</div>
 				
-				<input type="hidden" id="valorComumAnterior"
-					name="valorComumAnterior" value="${valorComumAnterior}" /> <input
-					type="hidden" id="mercado" name="mercado" value="${mercado}" />
+				<input type="hidden" id="valorComumAnterior" name="valorComumAnterior" value="${valorComumAnterior}" /> 
+				<input type="hidden" id="mercado" name="mercado" value="${mercado}" />
 
 				<div class="col">
 					<br>
-					<button type="button" class="btn btn-primary"
-						onclick="calcularValores()">Calcular Valores</button>
+					<button type="button" class="btn btn-primary" onclick="calcularValores()">Calcular Valores</button>
 				</div>
 			</div>
 
-
 			<div class="row">
-
 				<div class="col">
-					<br> <input type="hidden" id="id" th:field="*{id}" />
-					<button type="submit" class="btn btn-primary btn-sm"
-						onclick="calcularMercado()">Salvar</button>
+					<br> 
+					<input type="hidden" id="id" th:field="*{id}" />
+					<button type="submit" class="btn btn-primary btn-sm" onclick="calcularMercado()">Salvar</button>
 				</div>
 			</div>
 		</form>
 	</div>
 
-
 	<script th:inline="javascript">
 		/*<![CDATA[*/
-
-
 		function limparCampos() {
-
 			document.getElementById("valor1").value = "";
 			document.getElementById("valor2").value = "";
 			document.getElementById("valor3").value = "";
@@ -310,12 +284,8 @@
 			document.getElementById("valorComum").value = "";
 
 			buscarCotacaoAnterior();
-
 		}
-	
-	</script>
-	<script th:inline="javascript">
-		/*<![CDATA[*/
+
 		$(document).ready(function () {
 			// Aplica a máscara para aceitar somente vírgulas em todos os campos de valor
 			$('.valor-com-virgula').mask('#.##0,00', {
@@ -325,13 +295,11 @@
 		/*]]>*/
 	</script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/script/cotacao/buscarCotacaoAnterior.js"></script>
-<script src="/script/cotacao/calcularMercado.js"></script>
-<script src="/script/cotacao/limparCampoCodigo.js"></script><script src="/script/cotacao/filtrarPorCodigo.js"></script>
-<script src="/script/cotacao/calcularValores.js"></script>
-
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="/script/cotacao/buscarCotacaoAnterior.js"></script>
+	<script src="/script/cotacao/calcularMercado.js"></script>
+	<script src="/script/cotacao/limparCampoCodigo.js"></script>
+	<script src="/script/cotacao/filtrarPorCodigo.js"></script>
+	<script src="/script/cotacao/calcularValores.js"></script>
 </body>
-
 </html>
