--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -72,7 +72,7 @@
                         Cotação
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/cotacoes/cadastrar}">Cotação</a></li>
+                        <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/cotacoes/pesquisar}">Cotação</a></li>
                         <li><a class="dropdown-item" th:href="@{/cotacoes/por-data}">Consultar</a></li>
                     </ul>
                 </li>
