--- a/src/main/resources/templates/cotacao/cotacao_cadastro.html
+++ b/src/main/resources/templates/cotacao/cotacao_cadastro.html
@@ -207,7 +207,7 @@
                 <div class="col">
                     <br> 
                     <input type="hidden" id="id" th:field="*{id}" />
-                    <button type="submit" class="btn btn-primary btn-sm" onclick="calcularMercado()">Salvar</button>
+                    <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
                 </div>
             </div>
         </form>
