Produção Nova Cotacao - acerto dígitos de valor1 e 2, outros acertos

--- a/src/main/resources/templates/cotacao/cotacao_cadastro.html
+++ b/src/main/resources/templates/cotacao/cotacao_cadastro.html
@@ -216,6 +216,7 @@
     <script th:inline="javascript">
         $(document).ready(function() {
             $('.valor').mask('#.##0,00', { reverse: true });
+            $('#valor1').focus(); // Define o foco no campo valor1
         });
     </script>
    
