--- a/src/main/resources/templates/cotacao/cotacao_pesquisar.html
+++ b/src/main/resources/templates/cotacao/cotacao_pesquisar.html
@@ -19,7 +19,7 @@
 
 	<div id="navmenu" th:insert="~{navbar :: menu-principal}"></div>
 	<div class="container">
-		<h1>Pesquisa de Propriedade</h1>
+		<h4>Pesquisa por código ou propriedade</h4>
 
 		<div th:if="${success}" class="alert alert-success" role="alert">
 			<p th:text="${success}"></p>
