--- a/src/main/resources/templates/nota/nota_cadastro.html
+++ b/src/main/resources/templates/nota/nota_cadastro.html
@@ -4,55 +4,9 @@
     <meta charset="UTF-8">
     <title>Cadastro de Nota Fiscal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/nota.css}" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <style>
-        .titulo {
-            font-size: 1.5em;
-            margin-bottom: 20px;
-        }
-        .subtitulo {
-            font-size: 1.25em;
-            margin-top: 20px;
-            margin-bottom: 10px;
-        }
-        .form-group-inline {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            white-space: nowrap;
-            flex-wrap: wrap; /* Permite que os elementos quebrem a linha quando necessário */
-        }
-        .form-control-small {
-            width: 150px;
-            padding: 0.25rem 0.5rem;
-            font-size: 0.875rem;
-        }
-        .property-result {
-            font-size: 0.75rem;
-            width: 300px;
-            padding-left: 10px;
-        }
-        .btn-danger {
-            padding: 0.25rem 0.5rem;
-            font-size: 0.875rem;
-        }
-        label {
-            font-size: 0.75rem;
-            margin-right: 5px;
-        }
-        .col-md-2-right {
-            margin-left: auto;
-        }
-        @media (max-width: 768px) {
-            .form-group-inline {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-            .property-result {
-                width: 100%;
-            }
-        }
-    </style>
+      
 </head>
 <body>
     <div th:replace="~{navbar :: menu-principal}"></div>
@@ -123,19 +77,19 @@
                         <div id="propertyResult-0" class="property-result" readonly></div>
                         <input type="hidden" id="propriedadeId-0" name="itens[0].propriedade.id">
                     </div>
-                    <div class="col-md-2 form-group-inline" style="margin-left: 15px;">
-                        <label for="quantidade-0">Quantidade</label>
+                    <div class="col-md-2 form-group-inline" style="margin-left: 100px;">
+                        <label for="quantidade-0">Quantidade: </label>
                         <input type="number" id="quantidade-0" name="itens[0].quantidade" class="form-control form-control-small" step="any" required>
                     </div>
-                    <div class="col-md-3 form-group-inline" style="margin-left: 15px;">
-                        <label for="unidadeMedida-0">Unidade de Medida</label>
+                    <div class="col-md-3 form-group-inline" style="margin-left: 100px;">
+                        <label for="unidadeMedida-0">Unidade:</label>
                         <select id="unidadeMedida-0" name="itens[0].unidadeMedida" class="form-control form-control-small" required>
                             <option value="" disabled selected>Selecione</option>
                             <option th:each="um : ${unidadesMedida}" th:value="${um}" th:text="${um}"></option>
                         </select>
                     </div>
-                    <div class="col-md-1 col-md-2-right d-flex align-items-center" style="margin-left: 15px;">
-                        <button type="button" class="btn btn-danger btn-sm remove-item">x</button>
+                    <div class="col-md-1 d-flex align-items-center" >
+                        <button type="button" class="btn btn-danger btn-sm remove-item" style="margin-left: 20px;">x</button>
                     </div>
                 </div>
             </div>
@@ -149,6 +103,7 @@
     <!-- Inclusão dos modais -->
     <div th:replace="municipioSearchModal :: municipioSearchModal"></div>
     <div th:replace="pesoTotalModal :: pesoTotalModal"></div>
+    <div th:replace="productSearchModal :: productSearchModal"></div>
 
     <script>
         function openMunicipioModal() {
@@ -212,18 +167,18 @@
                             <div id="propertyResult-${itemIndex}" class="property-result" readonly></div>
                             <input type="hidden" id="propriedadeId-${itemIndex}" name="itens[${itemIndex}].propriedade.id">
                         </div>
-                        <div class="col-md-2 form-group-inline" style="margin-left: 15px;">
-                            <label for="quantidade-${itemIndex}">Quantidade</label>
+                        <div class="col-md-2 form-group-inline" style="margin-left: 100px;">
+                            <label for="quantidade-${itemIndex}">Quantidade:</label>
                             <input type="number" id="quantidade-${itemIndex}" name="itens[${itemIndex}].quantidade" class="form-control form-control-small" step="any" required>
                         </div>
-                        <div class="col-md-3 form-group-inline" style="margin-left: 15px;">
-                            <label for="unidadeMedida-${itemIndex}">Unidade de Medida</label>
+                        <div class="col-md-3 form-group-inline" style="margin-left: 100px;">
+                            <label for="unidadeMedida-${itemIndex}">Unidade:</label>
                             <select id="unidadeMedida-${itemIndex}" name="itens[${itemIndex}].unidadeMedida" class="form-control form-control-small" required>
                                 <option value="" disabled selected>Selecione</option>
                                 ${$('#unidadeMedida-0').html()}
                             </select>
                         </div>
-                        <div class="col-md-1 col-md-2-right d-flex align-items-center" style="margin-left: 15px;">
+                        <div class="col-md-1 d-flex align-items-center" style="margin-left: 20px;">
                             <button type="button" class="btn btn-danger btn-sm remove-item">x</button>
                         </div>
                     </div>`;
@@ -258,7 +213,76 @@
 
             updateRemoveButtons();
         });
+        
+        
     </script>
+    
+    <script>
+    document.addEventListener('keydown', function(event) {
+        if (event.altKey && event.key === 'f') {  // 'f' para a tecla F
+            openProductSearchModal();
+            event.preventDefault();  // Evita qualquer comportamento padrão
+        }
+    });
+
+    function openProductSearchModal() {
+        document.getElementById('productSearchModal').style.display = 'block';
+    }
+
+    function closeProductSearchModal() {
+        document.getElementById('productSearchModal').style.display = 'none';
+    }
+</script>
+<script>
+function openProductSearchModal() {
+    document.getElementById('productSearchModal').style.display = 'block';
+}
+
+function closeProductSearchModal() {
+    document.getElementById('productSearchModal').style.display = 'none';
+}
+
+function searchProductByName() {
+    const productName = document.getElementById('productName').value;
+
+    fetch(`/notas/searchPropertyByProductName?productName=${productName}`)
+        .then(response => response.json())
+        .then(data => {
+            const resultsBody = document.getElementById('productResultsBody');
+            resultsBody.innerHTML = '';
+            data.forEach(propriedade => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${propriedade.produto.nome}</td>
+                    <td>${propriedade.codigo}</td>
+                    <td>${propriedade.variedade}</td>
+                    <td>${propriedade.subvariedade}</td>
+                    <td>${propriedade.classificacao}</td>
+                    <td>${propriedade.embalagem}</td>
+                    <td>${propriedade.peso}</td>
+                    
+                    
+                    <td><button type="button" class="btn btn-primary" onclick="selectProduct('${propriedade.codigo}', '${propriedade.id}', '${propriedade.variedade}','${propriedade.subvariedade}')">Selecionar</button></td>`;
+                resultsBody.appendChild(row);
+            });
+        })
+        .catch(error => console.error('Error:', error));
+}
+
+function selectProduct(codigo, id, variedade, subvariedade) {
+    const itemIndex = $('#itensContainer .item').length - 1; // Obter o índice do último item adicionado
+    const propertyCodeField = document.getElementById(`propertyCode-${itemIndex}`);
+    const propertyResultField = document.getElementById(`propertyResult-${itemIndex}`);
+    const propertyIdField = document.getElementById(`propriedadeId-${itemIndex}`);
+
+    propertyCodeField.value = codigo;
+    propertyResultField.textContent = `Código: ${codigo} - ${variedade} - ${subvariedade}`; // Pode ser ajustado conforme a informação que deseja exibir
+    propertyIdField.value = id;
+
+    closeProductSearchModal();
+}
+
+</script>
     <script src="/script/nota/clearForm.js"></script>
     <script src="/script/nota/municipioSearch.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
