--- a/src/main/resources/templates/cotacao/relatorio_form.html
+++ b/src/main/resources/templates/cotacao/relatorio_form.html
@@ -10,6 +10,15 @@
         <label for="file">Escolha o arquivo CSV:</label>
         <input type="file" id="file" name="file" accept=".csv" required>
         <br><br>
+        
+        <label for="mesAnoInicial">Mês e Ano Inicial (formato: yyyy-MM):</label>
+        <input type="month" id="mesAnoInicial" name="mesAnoInicial" required>
+        <br><br>
+        
+        <label for="quantidadeMeses">Quantidade de Meses:</label>
+        <input type="number" id="quantidadeMeses" name="quantidadeMeses" min="1" value="3" required>
+        <br><br>
+        
         <button type="submit">Gerar Relatório</button>
     </form>
 </body>
