--- a/src/main/resources/templates/cotacao/relatorio_form.html
+++ b/src/main/resources/templates/cotacao/relatorio_form.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
-    <title>Gerar Relatório de Cotações</title>
+    <title>Relatório mensal de média de valor comum</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/nota.css}" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+      
 </head>
 <body>
+    <div th:replace="~{navbar :: menu-principal}"></div>
+    
     <h2>Gerar Relatório de Cotações</h2>
     <form action="/cotacoes/gerar-relatorio" method="post" enctype="multipart/form-data">
         <label for="file">Escolha o arquivo CSV:</label>
@@ -21,5 +27,6 @@
         
         <button type="submit">Gerar Relatório</button>
     </form>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
